--- a/index.html
+++ b/index.html
@@ -48,7 +48,44 @@
     </div>
   </div>
   <section class="first-section">
-    <div class="container"><img src="img/image 12.png" alt="" class="background">
+    <div class="nav-menu">
+      <button class="nav-menu__button">
+        <img src="img/nav_menu.png" alt="" class="nav-menu__button_img">
+      </button>
+      <h1 class="logo_text">YOUR<span class="logo_text_span">SNEAKER</span></h1>
+      <a href="#" class="navigation-menu__icons_box urna-44"><img src="icons/корзина.png" alt="" class="navigation-menu__icons_item-1 debosh"></a>
+    </div>
+    <div class="burger burger-2  scale-up-ver-top">
+      <div class="burger__search">
+        <img src="icons/поиск.png" alt="" class="navigation-menu__icons_item">
+        <input type="text" placeholder="SEARCH" class="burger__input">
+      </div>
+      <div class="burger__sign">
+        <button class="burger__button">
+          <img src="icons/войти.png" alt="" class="navigation-menu__icons_item profile">
+        </button>
+        <p class="burger__sign_text">LOGIN</p>
+      </div>
+      <div class="burger__content ">
+        <ul class="burger_ul">
+          <li class="burger_item"><a href="#" class="navigation-menu__item_a">ALL</a></li>
+          <li class="burger_item"><a href="#" class="navigation-menu__item_a">WOMAN</a></li>
+          <li class="burger_item"><a href="#" class="navigation-menu__item_a">MEN</a></li>
+          <li class="burger_item"><a href="#" class="navigation-menu__item_a">WORCOUT</a></li>
+          <li class="burger_item"><a href="#" class="navigation-menu__item_a">RUN</a></li>
+          <li class="burger_item"><a href="#" class="navigation-menu__item_a">FOOTBALL</a></li>
+        </ul>
+      </div>
+      <div class="burger_nike">
+        <img src="img/logoNike.png" alt="" class="burger_logo">
+      </div>
+    </div>
+    <div class="container-phone">
+      <img src="img/fon.png" alt="" class="background-phone">
+      <img src="img/fon-2.png" alt="" class="background-phone-2">
+    </div>
+    <div class="container container-phone-2">
+      <img src="img/image 12.png" alt="" class="background">
       <div class="first-section__content">
         <h2 class="first-section__content_title">WE ARE NEVER DONE</h2>
         <p class="first-section__content_text">Celebrating 50 years of Nike from May 16th!
@@ -64,13 +101,14 @@
       <img src="img/Rectangle.gif" alt="" class="first-section_footer-1">
     </div>
   </section>
+  <img src="img/Rectangle.gif" alt="" class="gif-phone">
   <section class="interval-section">
     <img src="img/Group 17.png" alt="" class="interval-section_background">
     <img src="img/Vector.png" alt="" class="interval-section_vector">
   </section>
   <section class="second-section">
     <div class="container">
-      <div class="second-section__content-box first-content-box">
+      <div class="second-section__content-box first-content-box first_phone">
         <div class="second-section__content-box__left-wrapper">
           <h1 class="second-section__content-box_title">NEW</h1>
         <p class="second-section__content-box_text">
@@ -78,7 +116,7 @@
         </p>
         <div class="second-section__content-box_button"><a href="#" class="third-section__a"><img src="img/1.png" alt="" class="second-section__content-box_img"></a></div>
         </div>
-        <div class="second-section__content-box__right-wrapper">
+        <div class="second-section__content-box__right-wrapper wrapper-1">
           <img src="img/nike-air-max-270-sunset-dq7625-600_w380-removebg-preview 3.png" alt="" class="second-section__content-box__right-wrapper_img">
         </div>
       </div>
@@ -90,7 +128,7 @@
         </p>
         <div class="second-section__content-box_button button-2"><a href="#" class="third-section__a"><img src="img/1.png" alt="" class="second-section__content-box_img"></a></div>
         </div>
-        <div class="second-section__content-box__right-wrapper">
+        <div class="second-section__content-box__right-wrapper wrapper-2">
           <img src="img/Red Shoe.png" alt="" class="second-section__content-box__right-wrapper_img red-shoe">
         </div>
       </div>
