--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="container container-phone-2">
       <img src="img/image 12.png" alt="" class="background">
       <div class="first-section__content">
-        <h2 class="first-section__content_title">WE ARE NEVER DONE</h2>
+        <p class="first-section__content_title">WE ARE NEVER DONE</p>
         <p class="first-section__content_text">Celebrating 50 years of Nike from May 16th!
           Exclusive products, experiences and much more await you for five days. Scan and join the Nike app!</p>
         <div class="first-section__content_button">
@@ -100,11 +100,12 @@
       <img src="img/Rectangle.gif" alt="" class="first-section_footer">
       <img src="img/Rectangle.gif" alt="" class="first-section_footer-1">
     </div>
+    <img src="img/Rectangle.gif" alt="" class="gif-phone">
   </section>
-  <img src="img/Rectangle.gif" alt="" class="gif-phone">
+
   <section class="interval-section">
-    <img src="img/Group 17.png" alt="" class="interval-section_background">
-    <img src="img/Vector.png" alt="" class="interval-section_vector">
+      <img src="img/Group 17.png" alt="" class="interval-section_background">
+      <img src="img/Vector.png" alt="" class="interval-section_vector">
   </section>
   <section class="second-section">
     <div class="container">
