--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
   <section class="first-section">
     <div class="nav-menu">
       <button class="nav-menu__button">
-        <img src="img/nav_menu.png" alt="" class="nav-menu__button_img">
+        <hr class="nav-menu__button_hr hr-0">
+        <hr class="nav-menu__button_hr hr-1">
+        <hr class="nav-menu__button_hr hr-0">
       </button>
       <h1 class="logo_text">YOUR<span class="logo_text_span">SNEAKER</span></h1>
       <a href="#" class="navigation-menu__icons_box urna-44"><img src="icons/корзина.png" alt="" class="navigation-menu__icons_item-1 debosh"></a>
@@ -121,7 +123,7 @@
           <img src="img/nike-air-max-270-sunset-dq7625-600_w380-removebg-preview 3.png" alt="" class="second-section__content-box__right-wrapper_img">
         </div>
       </div>
-      <div class="second-section__content-box second-content-box">
+      <div class="second-section__content-box second-content-box first_phone">
         <div class="second-section__content-box__left-wrapper">
           <h1 class="second-section__content-box_title">NEW</h1>
         <p class="second-section__content-box_text">
