--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
     <div class="">
       <div class="third-section__content-title-buttons container">
       <p class="third-section__title container">Top sneakers</p>
-      <button class="third-section__slider_button-item prev container"><img src="img/Vector2.png" alt="" class="third-section__slider_button-img"></button>
-      <button class="third-section__slider_button-item next container third-section_button"><img src="img/Vector2.png" alt="" class="third-section__slider_button-img"></button>
+      <button class="third-section__slider_button-item prev prev-2 container"><img src="img/Vector2.png" alt="" class="third-section__slider_button-img"></button>
+      <button class="third-section__slider_button-item next next-2 container third-section_button"><img src="img/Vector2.png" alt="" class="third-section__slider_button-img"></button>
       </div>
       <div class="third-section__content-box">
         <div class="third-section__content-box-1 content-box">
@@ -156,37 +156,37 @@
               <img src="img/Yellow Shoe.png" alt="" class="third-section__slider-img">
               <p class="third-section__title-2">Air Max 97</p>
               <p class="third-section__price">$20.99</p>
-              <div class="second-section__content-box_button third-section__position"><a href="#" class="third-section__a"><img src="img/1.png" alt="" class="third-section__button-img"></a></div>
+              <div class="second-section__content-box_button button-phone third-section__position"><a href="#" class="third-section__a"><img src="img/1.png" alt="" class="third-section__button-img img-button"></a></div>
             </div>
             <div class="third-section__slider-item">
               <img src="img/react.png" alt="" class="third-section__slider-img">
               <p class="third-section__title-2">React Presto</p>
               <p class="third-section__price">$20.99</p>
-              <div class="second-section__content-box_button third-section__position"><a href="#" class="third-section__a"><img src="img/1.png" alt="" class="third-section__button-img"></a></div>
+              <div class="second-section__content-box_button button-phone third-section__position"><a href="#" class="third-section__a"><img src="img/1.png" alt="" class="third-section__button-img img-button"></a></div>
             </div>
             <div class="third-section__slider-item">
               <img src="img/kd13.png" alt="" class="third-section__slider-img">
               <p class="third-section__title-2">KD13 EP</p>
               <p class="third-section__price">$20.99</p>
-              <div class="second-section__content-box_button third-section__position"><a href="#" class="third-section__a"><img src="img/1.png" alt="" class="third-section__button-img"></a></div>
+              <div class="second-section__content-box_button button-phone third-section__position"><a href="#" class="third-section__a"><img src="img/1.png" alt="" class="third-section__button-img img-button"></a></div>
             </div>
             <div class="third-section__slider-item">
               <img src="img/Yellow Shoe.png" alt="" class="third-section__slider-img">
               <p class="third-section__title-2">Air Max 97</p>
               <p class="third-section__price">$20.99</p>
-              <div class="second-section__content-box_button third-section__position"><a href="#" class="third-section__a"><img src="img/1.png" alt="" class="third-section__button-img"></a></div>
+              <div class="second-section__content-box_button button-phone third-section__position"><a href="#" class="third-section__a"><img src="img/1.png" alt="" class="third-section__button-img img-button"></a></div>
             </div>
             <div class="third-section__slider-item">
               <img src="img/react.png" alt="" class="third-section__slider-img">
               <p class="third-section__title-2">React Presto</p>
               <p class="third-section__price">$20.99</p>
-              <div class="second-section__content-box_button third-section__position"><a href="#" class="third-section__a"><img src="img/1.png" alt="" class="third-section__button-img"></a></div>
+              <div class="second-section__content-box_button button-phone third-section__position"><a href="#" class="third-section__a"><img src="img/1.png" alt="" class="third-section__button-img img-button"></a></div>
             </div>
             <div class="third-section__slider-item">
               <img src="img/kd13.png" alt="" class="third-section__slider-img">
               <p class="third-section__title-2">KD13 EP</p>
               <p class="third-section__price">$20.99</p>
-              <div class="second-section__content-box_button third-section__position"><a href="#" class="third-section__a"><img src="img/1.png" alt="" class="third-section__button-img"></a></div>
+              <div class="second-section__content-box_button button-phone third-section__position"><a href="#" class="third-section__a"><img src="img/1.png" alt="" class="third-section__button-img img-button"></a></div>
             </div>
           </div>
         </div>
@@ -199,20 +199,23 @@
       <div class="fourth-section__content-boxes">
         <div class="fourth-section__content-box box-1">
           <p class="box-1_text">WORKOUT</p>
+          <img src="img/karlie-core-1 1.gif" alt="" class="box-2_gif-phone">
         </div>
-        <div class="fourth-section__content-box box-2">
+        <div class="fourth-section__content-box box-2 gif-phone">
           <img src="img/karlie-core-1 1.gif" alt="" class="box-2_gif">
         </div>
         <div class="fourth-section__content-box box-3">
-          <img src="img/salty 1.gif" alt="" class="box-3_gif">
+          <img src="img/salty 1.gif" alt="" class="box-2_gif-phone box-3-phone">
+          <p class="box-1_text box-1_phone">RUN</p>
         </div>
         <div class="fourth-section__content-box box-1">
           <p class="box-1_text">RUN</p>
         </div>
-        <div class="fourth-section__content-box box-1">
-          <p class="box-1_text">FOOTBALL</p>
+        <div class="fourth-section__content-box box-1 box-2-phone content-box-phone">
+          <p class="box-1_text box-phone">FOOTBALL</p>
+          <img src="img/9n9z 1.gif" alt="" class="box-3_gif box-6_gif box-2_gif-phone">
         </div>
-        <div class="fourth-section__content-box box-3 box-6">
+        <div class="fourth-section__content-box box-3 box-6 ">
           <img src="img/9n9z 1.gif" alt="" class="box-3_gif box-6_gif">
         </div>
       </div>
