--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
   <section class="first-section">
     <div class="nav-menu">
       <button class="nav-menu__button">
-        <hr class="nav-menu__button_hr hr-0">
-        <hr class="nav-menu__button_hr hr-1">
-        <hr class="nav-menu__button_hr hr-0">
+        <hr class="nav-menu__button_hr hr-0 ">
+        <hr class="nav-menu__button_hr hr-1 ">
+        <hr class="nav-menu__button_hr hr-0 hr-2 ">
       </button>
       <h1 class="logo_text">YOUR<span class="logo_text_span">SNEAKER</span></h1>
       <a href="#" class="navigation-menu__icons_box urna-44"><img src="icons/корзина.png" alt="" class="navigation-menu__icons_item-1 debosh"></a>
@@ -102,7 +102,7 @@
       <img src="img/Rectangle.gif" alt="" class="first-section_footer">
       <img src="img/Rectangle.gif" alt="" class="first-section_footer-1">
     </div>
-    <img src="img/Rectangle.gif" alt="" class="gif-phone">
+    <img src="img/Rectangle.gif" alt="" class="gif-phone none">
   </section>
 
   <section class="interval-section">
@@ -205,8 +205,8 @@
           <img src="img/karlie-core-1 1.gif" alt="" class="box-2_gif">
         </div>
         <div class="fourth-section__content-box box-3">
-          <img src="img/salty 1.gif" alt="" class="box-2_gif-phone box-3-phone">
-          <p class="box-1_text box-1_phone">RUN</p>
+          <img src="img/salty 1.gif" alt="" class="box-3-phone gif-44 fourth-section_gif">
+          <p class="box-1_text box-1_phone box-2_gif-phone">RUN</p>
         </div>
         <div class="fourth-section__content-box box-1">
           <p class="box-1_text">RUN</p>
@@ -224,6 +224,11 @@
   <section class="fifth-section">
     <div class="container">
       <div class="fifth-section_title">LOOKS GOOD.RUNS GOOD.FEELS GOOD.</div>
+      <div class="fifth-section_title_phone">
+        <p class="fifth-section_title_p p-1">LOOKS GOOD.</p>
+        <p class="fifth-section_title_p p-2">RUNS GOOD.</p>
+        <p class="fifth-section_title_p p-3">FEELS GOOD.</p>
+      </div>
       <div class="fifth-section__boxes">
         <div class="fifth-section_content-box">
           <p class="fifth-section_content-title"><span class="fifth-section_content-title_span">-20%</span> Discount</p>
@@ -231,6 +236,11 @@
           <button class="fifth-section_content-button">
             <a href="#" class="fifth-section_content-button_a">
               <p class="fifth-section_content-button_text">Shop now</p>
+            </a>
+          </button>
+          <button class="fifth-section_content-button-phone">
+            <a href="#" class="fifth-section_content-button_a_phone">
+              <img src="img/1.png" alt="" class="third-section__content-box-phone">
             </a>
           </button>
           <img src="img/Nike-Shoe.png" alt="" class="fifth-section_content-img">
@@ -243,6 +253,11 @@
               <p class="fifth-section_content-button_text">Shop now</p>
             </a>
           </button>
+          <button class="fifth-section_content-button-phone">
+            <a href="#" class="fifth-section_content-button_a_phone">
+              <img src="img/1.png" alt="" class="third-section__content-box-phone">
+            </a>
+          </button>
           <img src="img/Green 1.png" alt="" class="fifth-section_content-img IMG">
         </div>
       </div>
@@ -252,6 +267,7 @@
     <div class="">
       <p class="sixth-section_title container">MORE NIKE PRODUCTS</p>
       <div class="sixth-section__content-box">
+        <img src="img/image 11.png" alt="" class="sixth-section__content-box-phone">
         <p class="sixth-section__content-title">YOUR NIKE MEMBERSHIP</p>
         <p class="sixth-section__content-text">
           Join our members and show your love with <span class="sixth-section__content-span">Nike By You!</span>
